[build-system]
requires      = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name        = "luminark-codewriter"
version     = "1.0.0"
description = "LUMINARK Active Governance Layer — Stanfield's Axiom of Perpetuity"
readme      = "README.md"
license     = { text = "Proprietary" }
authors     = [
    { name = "Richard L. Stanfield", email = "LuminarkMeridian@gmail.com" }
]
requires-python = ">=3.11"

dependencies = [
    "numpy>=1.26,<2.0",
    "scipy>=1.13,<2.0",
    "docker>=7.0,<8.0",
    "hypothesis>=6.100,<7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.4",
    "mypy>=1.10",
    "hypothesis>=6.100",
]

[project.scripts]
luminark-govern = "luminark_live_bridge:main"

# ── Ruff (linter + formatter) ─────────────────────────────────────────────────

[tool.ruff]
target-version = "py311"
line-length    = 100
src            = ["."]

[tool.ruff.lint]
select  = ["E", "F", "W", "I", "N", "UP", "B", "C4", "SIM"]
ignore  = ["E501", "N803", "N806"]

[tool.ruff.lint.isort]
known-first-party = ["sap_geometry_engine", "sap_lyapunov",
                     "sap_constrained_bayesian", "sap_stage_classifier",
                     "luminark_live_bridge"]

# ── Pytest ────────────────────────────────────────────────────────────────────

[tool.pytest.ini_options]
testpaths    = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts      = "-v --tb=short"

# ── Mypy ──────────────────────────────────────────────────────────────────────

[tool.mypy]
python_version = "3.11"
strict         = false
ignore_missing_imports = true

# ── Setuptools ────────────────────────────────────────────────────────────────

[tool.setuptools.packages.find]
where = ["."]
include = ["sap_*", "luminark_*"]
